--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -1,7 +1,7 @@
 ## Topnav single links
 ## if you want to list an external url, use external_url instead of url. the theme will apply a different link base.
 topnav:
-- title: DailyLog
+- title: Home
   items:
-    - title: DailyLog
-      url: /logbook/
+    - title: Home
+      url: /
