--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -5,3 +5,7 @@ topnav:
   items:
     - title: Home
       url: /
+- title: August 2016
+  items:
+    - title: August 2016
+      url: /august2016/
