--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -9,3 +9,7 @@ topnav:
   items:
     - title: August 2016
       url: /august2016/
+- title: WR 2016 Notes
+  items:
+    - title: WR 2016 Notes
+      url: /Run2016Notes/
